--- a/index.html
+++ b/index.html
@@ -227,19 +227,33 @@
         </section>
 
         <section id="portfolio">
-            <h3>Projets personnels</h3>
-            <div class="projects-perso">
-                <div class="project perso-portfolio">
+            <div class="projects-btns">
+                <button class="mon-portfolio btn-portfolio btn-circle btn-circle-xs"><img src="" alt=""></button>
+                <button class="ecoarava btn-portfolio btn-circle btn-circle-xs active"><img src="pictures/ecoarava-logo.png" alt=""></button>
+                <button class="fisheye btn-portfolio btn-circle btn-circle-xs"><img src="pictures/fisheye-logo.png" alt=""></button>
+                <button class="gameon btn-portfolio btn-circle btn-circle-xs"><img src="pictures/gameon-logo.png" alt=""></button>
+                <button class="ohmyfood btn-portfolio btn-circle btn-circle-xs"><img src="pictures/ohmyfood-logo.png" alt=""></button>
+                <button class="reservia btn-portfolio btn-circle btn-circle-xs"><img src="pictures/reservia-logo.png" alt=""></button>
+            </div>
+            
+            <div class="projects">
+                <div class="mon-portfolio project">
+                    <img src="" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet personnel</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Mon portfolio</h4>
                             <h5>Conception et réalisation d'un site web</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i
+                                    class="fab fa-github"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>UI design</li>
                             <li>Responsive design</li>
                             <li>HTML5</li>
@@ -249,25 +263,27 @@
                         </ul>
                         <p></p>
                     </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i
-                                class="fab fa-github"></i></a>
-                    </div>
                 </div>
 
-                <div class="project perso-ecoarava">
+                <div class="ecoarava project active">
+                    <img src="pictures/ecoarava.png" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="pictures/ecoarava.png" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet personnel</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Eco Arava</h4>
                             <h5>Conception et réalisation d'un site web</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="https://github.com/marie-bu/EcoArava" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/EcoArava/" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>UI design</li>
                             <li>Responsive design</li>
                             <li>Création d'un logo</li>
@@ -282,30 +298,27 @@
                             terme le site actuel, un ancien site Wordpress que j'avais monté il y a plusieurs années
                             (création du logo et du contenu compris).</p>
                     </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="https://github.com/marie-bu/EcoArava" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
-                        <a href="https://marie-bu.github.io/EcoArava/" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
                 </div>
-            </div>
 
-            <h3>Projets OpenClassrooms</h3>
-            <div class="projects-op">
-                <div class="project op-fisheye">
+                <div class="fisheye project">
+                    <img src="pictures/fisheye.png" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="pictures/fisheye.png" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet OpenClassrooms</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Fisheye</h4>
                             <h5>Créer un site accessible</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="https://github.com/marie-bu/MarieBurki_6_23022021" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/MarieBurki_6_23022021/" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>Accessibilité</li>
                             <li>Javascript</li>
                             <li>CSS3</li>
@@ -320,28 +333,27 @@
                             accessibilité au clavier).
                         </p>
                     </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="https://github.com/marie-bu/MarieBurki_6_23022021" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
-                        <a href="https://marie-bu.github.io/MarieBurki_6_23022021/" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
                 </div>
 
-                <div class="project op-gameon">
+                <div class="gameon project">
+                    <img src="pictures/gameon.png" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="pictures/gameon.png" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet OpenClassrooms</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Game On</h4>
                             <h5>Créer un formulaire d'inscription avec Javascript</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="https://github.com/marie-bu/MarieBurki_4_10022021" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/MarieBurki_4_10022021/" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>Javascript</li>
                         </ul>
                         <p>Ce projet est la première approche de Javascript dans le parcours Front-end d'OpenClassrooms.
@@ -349,27 +361,27 @@
                             ouverture et fermeture d'une modale, vérification de certains critères pour chaque input,
                             apparition de messages d'erreur et de confirmation.</p>
                     </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="https://github.com/marie-bu/MarieBurki_4_10022021" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
-                        <a href="https://marie-bu.github.io/MarieBurki_4_10022021/" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
                 </div>
 
-                <div class="project op-ohmyfood">
+                <div class="ohmyfood project">
+                    <img src="pictures/ohmyfood.png" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="pictures/ohmyfood.png" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet OpenClassrooms</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Oh My Food</h4>
                             <h5>Dynamiser une page web avec des animations CSS</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="https://github.com/marie-bu/MarieBurki_3_12012021" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/MarieBurki_3_12012021/" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>CSS3</li>
                             <li>Sass</li>
                             <li>HTML5</li>
@@ -382,44 +394,34 @@
                             tablette et desktop.
                         </p>
                     </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="https://github.com/marie-bu/MarieBurki_3_12012021" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
-                        <a href="https://marie-bu.github.io/MarieBurki_3_12012021/" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
-                    </div>
                 </div>
 
-                <div class="project op-reservia">
+                <div class="reservia project">
+                    <img src="pictures/reservia.png" alt="" class="project-img">
                     <div class="project-main">
-                        <img src="pictures/reservia.png" alt="" class="project-img">
-                        <div class="project-title">
+                        <p class="h5 project-main-type">Projet OpenClassrooms</p>
+                        <div class="project-main-title">
                             <h4 class="h3">Reservia</h4>
                             <h5>Transformer une maquette en site web</h5>
                         </div>
+                        <div class="project-main-links">
+                            <a href="https://github.com/marie-bu/MarieBurki_2_20122020" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            <a href="https://marie-bu.github.io/MarieBurki_2_20122020/" target="blank"
+                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills">
-                            <li><i class="fas fa-tools"></i></li>
+                            <li class="btn-icon-xs icon-tools"><i class="fas fa-tools"></i></li>
                             <li>CSS3</li>
                             <li>HTML5</li>
                             <li>Responsive design</li>
                         </ul>
                         <p>L'objectif sur ce projet est d'intégrer une maquette responsive en HTML et en CSS, tout en se
-                            familiarisant avec la gestion de versions sur Git et GitHub. La maquette pour la version
+                            familiarisant avec la gestion de versions sur Git et GitHub.<br> La maquette pour la version
                             tablette n'étant pas définie, c'est à l'étudiant de concevoir le design pour ce format.</p>
-                    </div>
-                    <div class="project-links">
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
-                        <a href="https://github.com/marie-bu/MarieBurki_2_20122020" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
-                        <a href="" class="btn-portfolio btn-icon btn-icon-xs"><i class="far fa-images"></i></a>
-                        <a href="https://marie-bu.github.io/MarieBurki_2_20122020/" target="blank"
-                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
