bouncing balls home page, new colors, improved content

--- a/index.html
+++ b/index.html
@@ -48,16 +48,30 @@
                             
     <main>
         <section id="home">
-            <a href="#cv" class="btn-cv btn-circle btn-circle-l btn-1" id="btn-cv">Curriculum Vitae</a>
-            <a href="#career" class="btn-career btn-circle btn-circle-l btn-2" id="btn-career">Parcours</a>
-            <a href="#refer" class="btn-refer btn-circle btn-circle-l btn-3"
-                id="btn-refer">Recommandation</a>
-            <a href="#skills" class="btn-skills btn-circle btn-circle-l btn-4"
-                id="btn-skills">Compétences</a>
-            <a href="#portfolio" class="btn-portfolio btn-circle btn-circle-l btn-5"
-                id="btn-portfolio">Portfolio</a>
-            <a href="#contact" class="btn-contact btn-circle btn-circle-l btn-6"
-                id="btn-contact">Contact</a>
+            <div class="ball-wrapper">
+                <a href="#cv" class="ball-cv ball-l">Curriculum Vitae</a>
+                <div class="ball-shadow ball-shadow-0"></div>
+            </div>
+            <div class="ball-wrapper">
+                <a href="#career" class="ball-career ball-l">Parcours</a>
+                <div class="ball-shadow ball-shadow-1"></div>
+            </div>
+            <div class="ball-wrapper">
+                <a href="#refer" class="ball-refer ball-l">Recommandation</a>
+                <div class="ball-shadow ball-shadow-2"></div>
+            </div>
+            <div class="ball-wrapper">
+                <a href="#skills" class="ball-skills ball-l">Compétences</a>
+                <div class="ball-shadow ball-shadow-3"></div>
+            </div>
+            <div class="ball-wrapper">
+                <a href="#portfolio" class="ball-portfolio ball-l">Portfolio</a>
+                <div class="ball-shadow ball-shadow-4"></div>
+            </div>
+            <div class="ball-wrapper">
+                <a href="#contact" class="ball-contact ball-l">Contact</a>
+                <div class="ball-shadow ball-shadow-5"></div>
+            </div>
         </section>
 
         <section class="section" id="cv">
@@ -247,11 +261,10 @@
                             <h5>Conception et réalisation d'un site web</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                             <a href="" target="blank" class="btn-portfolio btn-icon btn-icon-xs"><i
                                     class="fab fa-github"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
@@ -276,13 +289,12 @@
                             <h5>Conception et réalisation d'un site web</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i class="fas fa-ellipsis-v"></i></button>
                             <a href="https://github.com/marie-bu/EcoArava" target="blank"
-                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/EcoArava/" target="blank"
-                                class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
+                            class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
@@ -298,10 +310,10 @@
                             <li>Sass</li>
                         </ul>
                         <p>Ce projet est une nouvelle version du site actuel <a href="http://ecoarava.com" target="blank" class="bold">www.ecoarava.com</a>, que j'avais monté sur WordPress il y a des années.<br>
-                        J'ai créé de A à Z le design, le logo, le contenu, le code, les fonctionnalités.<br>A l'avenir, on y ajoutera peut-être le back-end pour le rendre opérationnel.</p>
+                            J'ai tout créé et codé (design, logo, contenu, fonctionnalités...)<br>A l'avenir, on y ajoutera peut-être le back-end pour le rendre opérationnel.</p>
+                        </div>
                     </div>
-                </div>
-
+                    
                 <div class="fisheye project">
                     <img src="pictures/fisheye.png" alt="" class="project-img">
                     <div class="project-main">
@@ -311,13 +323,13 @@
                             <h5>Créer un site accessible</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
+                                    class="fas fa-ellipsis-v"></i></button>
                             <a href="https://github.com/marie-bu/MarieBurki_6_23022021" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/MarieBurki_6_23022021/" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
@@ -347,13 +359,13 @@
                             <h5>Créer un formulaire d'inscription avec Javascript</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
+                                    class="fas fa-ellipsis-v"></i></button>
                             <a href="https://github.com/marie-bu/MarieBurki_4_10022021" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/MarieBurki_4_10022021/" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
@@ -376,13 +388,13 @@
                             <h5>Dynamiser une page web avec des animations CSS</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
+                                    class="fas fa-ellipsis-v"></i></button>
                             <a href="https://github.com/marie-bu/MarieBurki_3_12012021" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/MarieBurki_3_12012021/" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills ">
@@ -410,13 +422,13 @@
                             <h5>Transformer une maquette en site web</h5>
                         </div>
                         <div class="project-main-links">
+                            <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
+                                    class="fas fa-ellipsis-v"></i></button>
                             <a href="https://github.com/marie-bu/MarieBurki_2_20122020" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fab fa-github"></i></a>
                             <a href="https://marie-bu.github.io/MarieBurki_2_20122020/" target="blank"
                                 class="btn-portfolio btn-icon btn-icon-xs"><i class="fas fa-external-link-alt"></i></a>
                         </div>
-                        <button class="btn-portfolio btn-icon btn-icon-xs btn-icon-more"><i
-                                class="fas fa-ellipsis-v"></i></button>
                     </div>
                     <div class="project-details">
                         <ul class="project-details-skills">
@@ -436,8 +448,7 @@
         <section class="section" id="contact">
             <p>Vous pouvez m'écrire à l'adresse mail suivante :<br>
                 <span class="bold">marie.buerki@gmail.com<a href="mailto:marie.buerki@gmail.com" target="_blank"
-                        class="btn-contact btn-icon btn-icon-xs" id="send-mail"><i
-                            class="far fa-paper-plane"></i></a></span><br>
+                        class="btn-contact btn-icon btn-icon-xs" id="send-mail"><i class="far fa-envelope"></i></a></span><br>
                 Ou me contacter via les plateformes ci-dessous :
             </p>
             <div class="contact-icons">
